i   omiscid-dev                     - OMiSCID Headers and Dev files             
p   omiscid-ext                     - Extension for the OMiSCID middleware inclu
p   omiscid-ext-dev                 - OMiSCID Extension development files       
!!! is visible with omiscidgui using mdns but not using jive

1.
r
added missing synchronized to ServiceImpl#connectTo

1.5.0
r4950
        fix:  trying to send message (or reply message) through a input connector now properly throws an exception
        fix:  service disapparitions were properly notified but browsing with a new service repository caused disappeared services to be reported as present
        fix:  some corner case problems with connection notifications and early message sending that appeared with the removal of castor-xml
        fix: connector listeners now receive "connected" notifications even when connections are initiated locally (this behavior may be subject to discussion, please contact us in case you'd rather have the opposite to happen)
        impr: convert to JAXB. Omiscid was using castor-xml for its xml communication but it now uses jaxb which is included in Java 6.0 and only requires 2 jars (900k) with java 5.0. JAXB is also faster than castor-xml when used within omiscid
        impr: preferred dnssd factory can now be set programatically (this is important in some rare cases)

1.4.0
r4215
        fix:  a connector listener can now properly remove itself (stop listening) without throwing a concurrent modification exception
        fix:  problem in some cases when using removeAllConnectorListeners, some listeners might keep listening
        fix:  some LocalVariableListener received isValid calls for variables they were not registered to
        fix:  (API) createServiceRepository was improperly spelled (createServiceRepositoy) in ServiceFactory
        fix:  problem with netbeans when release contains castor generated .java files (these .java are not included any more)